[package]
name = "config-example"
version = "0.2.0"
authors = ["Chris Snape-Jenkinson"]
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0"
