[package]
name = "config-example"
version = "0.3.0"
authors = ["Chris Snape-Jenkinson"]
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0"
